--- a/style.css
+++ b/style.css
@@ -56,13 +56,15 @@ margin: auto;
 }
 #fb{
     color: blue;
+    width: 16px;
+    height: 20px;
     
 
 
 }
 #ggl{
     height: 15px;
-    width: 15px;
+    width: 20px;
 
 }
 .input{
